update logging flags
